Enhance Spark integration tests and principal management
- Updated HarnessTruststore to replace the default SSL context with a custom truststore for harness certificate authorities.
- Refactored SparkCatalogBindingConformanceTest to utilize StratusSparkClient for SQL operations, improving clarity and maintainability.
- Introduced PlatformJobs class to run platform jobs in a client's driver, capturing job outcomes and status codes.
- Added PolarisPrincipals class to manage catalog principals via the Polaris management API, enabling dynamic principal creation and removal.
- Implemented SparkPrincipalSeparationTest to validate that two principals operate independently, ensuring proper authorization separation.
- Configured Maven Surefire Plugin to prevent reuse of JVMs across test classes, ensuring isolated Spark sessions for each test.
- Enhanced SparkVerificationLogging to include job completion and principal provisioning details for better traceability.